<resources>
    <string name="app_name">KtoGdzieKiedy</string>
    <string name="hello_user">Hello @USER</string>
    <string name="running_tasks">Running tasks</string>

    <string name="app_title">KtoGdzieKiedy</string>
    <string name="app_info">zarządanie Twoimi zadaniami w pracy</string>
    <string name="login_title">Wprowadź swój login</string>
    <string name="login_hint">twój login</string>
    <string name="submit">POTWIERDŹ</string>

    <string name="pin_title">Wprowadź swój kod PIN</string>
    <string name="pin_hint">twój PIN</string>
    <string name="log_in">ZALOGUJ SIĘ</string>

    <string name="started_title">LOGOWANIE</string>
    <string name="selected_user">Wybrany użytkownik:</string>

    <string name="raporty">RAPORTY</string>
    <string name="raporty_opis">Sposób wyświetlenia raportów</string>
    <string name="raporty_kategorie">WEDŁUG KATEGORII</string>
    <string name="raporty_summary">PODSUMOWANIE</string>
    <string name="raporty_pracownicy">WSZYSTKIE</string>

    <string name="podsumowanie">PODSUMOWANIE</string>
    <string name="podsumowanie_opis">Wybierz rodzaj podsumowania</string>
    <string name="podsumowanie_zadanie">WEDŁUG ZADAŃ</string>
    <string name="podsumowanie_pracownik">WEDŁUG PRACOWNIKA</string>

    <string name="logout_title">Do you want to logout?</string>
    <string name="logout_button">Logout</string>
</resources>