<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaportRodzajActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raporty"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_500"
        android:background="@drawable/rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opis"
        android:text="@string/raporty_opis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/opis"
            app:layout_constraintBottom_toTopOf="@id/ll2">

            <Button
                android:id="@+id/button_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:padding="10dp"
                android:textSize="24sp"
                android:text="@string/raporty_kategorie"
                android:background="@drawable/rounded_corner_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <Button
            android:id="@+id/button_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="60dp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_all"
            android:text="@string/raporty_pracownicy"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/button_category" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>