<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <TextView
        android:id="@+id/pin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_title"
        android:layout_marginTop="120dp"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/pin_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pin_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:imeOptions="actionDone"
            android:maxLength="8"
            android:textSize="24sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:layout_marginTop="120dp"
        android:padding="10dp"
        android:background="@drawable/rounded_corner_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_input" />

</androidx.constraintlayout.widget.ConstraintLayout>